<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rv_view_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="5dp"
    android:paddingTop="5dp">

    <TextView
        android:id="@+id/rv_rowno"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:text="#"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/tv_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:text="@string/item"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/rv_soh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:text="@string/SOH"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/rv_wos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:text="@string/WoS"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/rv_git"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:text="@string/git"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/rv_ordered"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:text="@string/ordered"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:orientation="vertical">

        <com.robinhood.spark.SparkView
            android:id="@+id/sparkview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>