<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jsi.mbrana.Workflow.Update.UpdateActivity"
    tools:showIn="@layout/activity_apk_update">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/mbrana"
        android:src="@drawable/mbrana_small" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/please_wait"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/download_in_progress"
        android:textColor="@color/gray7"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tv_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:text="100%"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tv_latest_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latest_version"
        android:layout_marginTop="50dp"
        android:textColor="@color/gray7"
        android:textSize="15sp" />

</LinearLayout>
