<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rv_view_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/rv_rowno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:textAlignment="center"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/dashboard_soh_recycler_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:text="@string/item"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/dashboard_soh_recycler_unit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:text="@string/unit"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/dashboard_soh_recycler_soh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:text="@string/SOH"
        android:textSize="15sp" />
</LinearLayout>