<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/smallPadding"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jsi.mbrana.Workflow.Order.CreateOrderActivity"
    tools:showIn="@layout/activity_create_vrf">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_requested_date"
            android:layout_gravity="center_vertical"
            android:textColor="@color/gray6"
            android:layout_marginEnd="@dimen/smallPadding"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_date_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/smallPadding"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_requested_date"
            android:layout_gravity="center_vertical"
            android:textColor="@color/gray6"
            android:layout_marginEnd="@dimen/smallPadding"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_date_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="@dimen/smallPadding"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/roundedborder"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/logoBlueColor"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text=" "
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="Item"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:paddingLeft="2dp"
                    android:text="Unit"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_required_header"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="Required"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="Requested"
                    android:textSize="15dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/newpo_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/neworder_draftSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_as_draft"
            android:textColor="@color/white"
            android:theme="@style/AppTheme.ButtonLightExcess"
            android:visibility="gone" />

        <Button
            android:id="@+id/newpo_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:theme="@style/AppTheme.ButtonExcess"
            android:visibility="gone" />

        <Button
            android:id="@+id/newpo_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:theme="@style/AppTheme.ButtonExcess"
            android:visibility="gone" />

        <Button
            android:id="@+id/order_print"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/print"
            android:textColor="@color/white"
            android:theme="@style/AppTheme.ButtonLightExcess"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>
