<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingBottom="7dp"
    android:paddingTop="7dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.9"
        android:gravity="center">

        <TextView
            android:id="@+id/receiptStatus_FirstLetter"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/circle_blue"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/t"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.2"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingEnd="18dp"
        android:paddingTop="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ViewRecDetail_TableRowStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:paddingStart="2dp"
                android:text="@string/status"
                android:textSize="6.5pt"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ViewRecDetail_TableRowPrintedDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.27"
                android:text="@string/date"
                android:textAlignment="viewEnd"
                android:textSize="6.5pt" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="0dp"
            android:paddingTop="2dp"
            android:textAlignment="center">

            <TextView
                android:id="@+id/ViewRIDetail_TableRowReceiptID"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.36"
                android:gravity="left"
                android:paddingLeft="2dp"
                android:text="Items"
                android:textColor="@color/gray4"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/ViewRecDetail_TableGridRowsNoOfItems"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/items"
                android:textAlignment="viewEnd"
                android:textColor="@color/gray4"
                android:textSize="12dp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>